--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the courses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+      #map {
+        height: 600px;
+        border-radius: 16px 16px;
+        border-color: #fff;
+        border-style: solid;
+        box-shadow: 2px 2px 10px #b1b1b1;
+        border-width: 7px;
+      }
+      #map-canvas {
+        height: 384px;
+        width: 100%
+      }
