--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
       #map {
-        height: 600px;
+        height: 500px;
         border-radius: 16px 16px;
         border-color: #fff;
         border-style: solid;
@@ -10,6 +10,6 @@
         border-width: 7px;
       }
       #map-canvas {
-        height: 384px;
-        width: 100%
+        height: 100%;
+        width: 100%;
       }
