--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,67 +1,49 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>TeeOff</title>
-	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-	<%= csrf_meta_tags %>
+<!--[if IE 8]>			<html class="ie ie8"> <![endif]-->
+<!--[if IE 9]>			<html class="ie ie9"> <![endif]-->
+<!--[if gt IE 9]><!-->	<html> <!--<![endif]-->
+	<head>
+		<meta charset="utf-8" />
+		<title></title>
+		<%= stylesheet_link_tag    'application', media: 'all' %>
+	 	<%= javascript_include_tag 'application' %>
+	 	<%= csrf_meta_tags %>
+	 	<!-- fullcalendar -->
+	 	<!-- <link rel='stylesheet' href='/assets/plugins/fullcalendar/fullcalendar.css' /> -->
+		<!-- // <script src='/assests/plugins/jquery/jquery.min.js'></script> -->
+		<!-- // <script src='/assets/plugins/bootstrap.daterangepicker/moment.js'></script> -->
+		<!-- // <script src='/assets/plugins/fullcalendar/fullcalendar.js'></script> -->
+		<!-- mobile settings -->
+		<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
+		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
-	<!-- mobile settings -->
-	<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />
-	<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
+		<!-- WEB FONTS : use %7C instead of | (pipe) -->
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
 
-	<!-- WEB FONTS : use %7C instead of | (pipe) -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400%7CRaleway:300,400,500,600,700%7CLato:300,400,400italic,600,700" rel="stylesheet" type="text/css" />
+		<!-- CORE CSS -->
+		<link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
-	<!-- CORE CSS -->
-	<link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<!-- THEME CSS -->
+		<link href="/assets/css/essentials.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/css/layout.css" rel="stylesheet" type="text/css" />
 
-	<!-- REVOLUTION SLIDER -->
-	<link href="/assets/plugins/slider.revolution/css/extralayers.css" rel="stylesheet" type="text/css" />
-	<link href="/assets/plugins/slider.revolution/css/settings.css" rel="stylesheet" type="text/css" />
+		<!-- PAGE LEVEL SCRIPTS -->
+		<link href="/assets/css/header-1.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
 
-	<!-- THEME CSS -->
-	<link href="/assets/css/essentials.css" rel="stylesheet" type="text/css" />
-	<link href="/assets/css/layout.css" rel="stylesheet" type="text/css" />
+		<!-- REVOLUTION SLIDER -->
+		<link href="/assets/plugins/slider.revolution/css/extralayers.css" rel="stylesheet" type="text/css" />
+		<link href="/assets/plugins/slider.revolution/css/settings.css" rel="stylesheet" type="text/css" />
 
-	<!-- PAGE LEVEL SCRIPTS -->
-	<link href="/assets/css/header-1.css" rel="stylesheet" type="text/css" />
-	<link href="/assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
-</head>
-<body class="smoothscroll enable-animation">
+	</head>
+
+	
+	<body class="smoothscroll enable-animation">
+
+		
 
 		<!-- wrapper -->
 		<div id="wrapper">
-
-			<!-- Top Bar -->
-			<div id="topBar">
-				<div class="container">
-
-					<!-- right -->
-					<ul class="top-links list-inline pull-right">
-						<li class="text-welcome hidden-xs">Welcome to TeeBox, <strong>John Doe</strong></li>
-						<li>
-							<a class="dropdown-toggle no-text-underline" data-toggle="dropdown" href="#"><i class="fa fa-user hidden-xs"></i> MY ACCOUNT</a>
-							<ul class="dropdown-menu pull-right">
-								<li><a tabindex="-1" href="#"><i class="fa fa-history"></i> ORDER HISTORY</a></li>
-								<li class="divider"></li>
-								<li><a tabindex="-1" href="#"><i class="fa fa-bookmark"></i> MY WISHLIST</a></li>
-								<li><a tabindex="-1" href="#"><i class="fa fa-edit"></i> MY REVIEWS</a></li>
-								<li><a tabindex="-1" href="#"><i class="fa fa-cog"></i> MY SETTINGS</a></li>
-								<li class="divider"></li>
-								<li><a tabindex="-1" href="#"><i class="glyphicon glyphicon-off"></i> LOGOUT</a></li>
-							</ul>
-						</li>
-					</ul>
-
-					<!-- left -->
-					<ul class="top-links list-inline">
-						<li class="hidden-xs"><a href="page-contact-1.html">CONTACT</a></li>
-					</ul>
-				</div>
-			</div>
-			<!-- /Top Bar -->
-
 
 			<!-- 
 				AVAILABLE HEADER CLASSES
@@ -89,7 +71,7 @@
 
 				Example Usage:  class="clearfix sticky header-sm transparent noborder"
 			-->
-			<div id="header" class="header-sm shadow-after-1 clearfix">
+			<div id="header" class="sticky transparent clearfix">
 
 				<!-- TOP NAV -->
 				<header id="topNav">
@@ -108,7 +90,7 @@
 								<a href="javascript:;">
 									<i class="fa fa-search"></i>
 								</a>
-								<div class="search-box">
+								<div class="search-box" style="display: none;">
 									<form action="page-search-result-1.html" method="get">
 										<div class="input-group">
 											<input type="text" name="src" placeholder="Search" class="form-control" />
@@ -121,51 +103,15 @@
 							</li>
 							<!-- /SEARCH -->
 
-							<!-- QUICK SHOP CART -->
-							<li class="quick-cart">
-								<a href="#">
-									<span class="badge badge-aqua btn-xs badge-corner">2</span>
-									<i class="fa fa-shopping-cart"></i> 
-								</a>
-								<div class="quick-cart-box">
-									<h4>Shop Cart</h4>
-
-									<div class="quick-cart-wrapper">
-
-										<a href="#"><!-- cart item -->
-											<img src="/assets/images/demo/people/300x300/4-min.jpg" width="45" height="45" alt="" />
-											<h6><span>2x</span> RED BAG WITH HUGE POCKETS</h6>
-											<small>$37.21</small>
-										</a><!-- /cart item -->
-
-										<a href="#"><!-- cart item -->
-											<img src="/assets/images/demo/people/300x300/5-min.jpg" width="45" height="45" alt="" />
-											<h6><span>2x</span> THIS IS A VERY LONG TEXT AND WILL BE TRUNCATED</h6>
-											<small>$17.18</small>
-										</a><!-- /cart item -->
-
-										<!-- cart no items example -->
-										
-										<a class="text-center" href="#">
-											<h6>0 ITEMS ON YOUR CART</h6>
-										</a>
-										
-
-									</div>
-
-									<!-- quick cart footer -->
-									<div class="quick-cart-footer clearfix">
-										<a href="shop-cart.html" class="btn btn-primary btn-xs pull-right">VIEW CART</a>
-										<span class="pull-left"><strong>TOTAL:</strong> $54.39</span>
-									</div>
-									<!-- /quick cart footer -->
-
-								</div>
-							</li>
-							<!-- /QUICK SHOP CART -->
-
 						</ul>
 						<!-- /BUTTONS -->
+
+
+						<!-- Logo -->
+						<a class="logo pull-left" href="index.html">
+							<h2>TeeBox</h2>
+						</a>
+
 						<!-- 
 							Top Nav 
 							
@@ -187,82 +133,76 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main">
 									<li class="dropdown active"><!-- HOME -->
-										<a class="dropdown-toggle" href="#">
+										<a href="/courses">
 											HOME
 										</a>
 									</li>
 
-									<li class="dropdown">
-										<a class="dropdown-toggle" href="/courses/id">
-											COURSES
+									<li class="dropdown"><!-- PAGES -->
+										<a class="dropdown-toggle" href="#">
+											PAGES
+										</a>
+									</li>
+
+									<li class="dropdown"><!-- FEATURES -->
+										<a class="dropdown-toggle" href="#">
+											FEATURES
 										</a>
 										<ul class="dropdown-menu">
 											<li class="dropdown">
-												<a class="dropdown-toggle" href="#">
-													ABOUT
-												</a>
-											</ul>
-										</li>
-
-										<li class="dropdown">
-											<a class="dropdown-toggle" href="#">
-												REVIEWS
-											</a>
-											<ul class="dropdown-menu">			
-											</ul>
-										</li>
-
-										<li class="dropdown mega-menu">
-											<a class="dropdown-toggle" href="#">
-												PRICES
-											</a>
-											<ul class="dropdown-menu">
-												<li>
-													<div class="row">
-
-														<div class="col-md-5th">
-															<ul class="list-unstyled">
-																<li><span>GRID</span></li>
-
-															</div>
-
-														</div>
-													</li>
-												</ul>
 											</li>
-
 											<li class="dropdown">
 												<a class="dropdown-toggle" href="#">
-													FIND A TEE TIME
+													<i class="et-hotairballoon"></i> HEADERS
 												</a>
-
-												<ul class="dropdown-menu">
-													<li class="dropdown">
-														<a class="dropdown-toggle" href="#">
-															DEFAULT
-														</a>
-													</li>
-												</ul>
-											</li>
-
-											<li class="dropdown">									
-												<a class="dropdown-toggle" href="#">
-													SCORECARD
-												</a>
-												<ul class="dropdown-menu pull-right">
-													<li class="dropdown">
-														<a class="dropdown-toggle" href="#">
-															1 COLUMN
-														</a>
-													</div>
-
-												</div>
 											</li>
 										</ul>
 									</li>
-									<li>
-										<a id="sidepanel_btn" href="#" class="fa fa-bars"></a>
+
+
+									<li class="dropdown"><!-- BLOG -->
+										<a class="dropdown-toggle" href="#">
+											BLOG
+										</a>
 									</li>
+
+
+									<li class="dropdown"><!-- SHOP -->
+										<a class="dropdown-toggle" href="#">
+											SHOP
+										</a>
+										<ul class="dropdown-menu pull-right">
+											<li class="dropdown">
+												<a class="dropdown-toggle" href="#">
+													1 COLUMN
+												</a>
+											</li>	
+										</ul>
+									</li>
+
+									<li class="dropdown"><!-- My Account -->
+										<a class="dropdown-toggle" href="#">
+											MY ACCOUNT
+										</a>
+										<ul class="dropdown-menu">
+											<li class="dropdown active">
+												<% if current_user %>
+												<%= link_to "LOGOUT", "/users/sign_out", method: :delete %>
+											</li>
+												<% else %>
+											<li class="dropdown active">
+												<a href="/users/sign_up">
+													SIGN UP
+												</a>
+											</li>
+											<li class="dropdown active">
+												<a href="/users/sign_in">
+													SIGN IN
+												</a>
+											</li>
+												<% end %>
+									</li>
+
 								</ul>
 
 							</nav>
@@ -273,129 +213,81 @@
 				<!-- /Top Nav -->
 
 			</div>
-			<%= current_user.email if current_user %>
+
 			<%= yield %>
 		</div>
-	<!-- /wrapper -->
+		<!-- /wrapper -->
+<!-- FOOTER -->
+			<footer id="footer">
+				<div class="container">
+
+					<div class="row">
+						
+						<div class="col-md-3">
+							
+							<!-- Contact Address -->
+							<address>
+								<ul class="list-unstyled">
+									<li class="footer-sprite address">
+										1871 Merchandise Mart<br>
+										Chicago, IL 60195<br>
+									</li>
+									<li class="footer-sprite phone">
+										Phone: 1-224-456-8338
+									</li>
+									<li class="footer-sprite email">
+										<a href="mailto:ryanlennon@gmail.com">TeeBox</a>
+									</li>
+								</ul>
+							</address>
+							<!-- /Contact Address -->
+
+						</div>
+
+						<div class="col-md-3">
+
+						</div>
+
+						<div class="col-md-2">
 
 
-		<!-- SIDE PANEL 
-			
-				sidepanel-dark 			= dark color
-				sidepanel-light			= light color (white)
-				sidepanel-theme-color		= theme color
-				
-				sidepanel-inverse		= By default, sidepanel is placed on right (left for RTL)
-								If you add "sidepanel-inverse", will be placed on left side (right on RTL).
-							-->
-							<div id="sidepanel" class="sidepanel-light">
-								<a id="sidepanel_close" href="#"><!-- close -->
-									<i class="glyphicon glyphicon-remove"></i>
-								</a>
+						</div>
 
-								<div class="sidepanel-content">
-									<h2 class="sidepanel-title">Explore TeeBox</h2>
+						<div class="col-md-4">
 
-									<!-- SIDE NAV -->
-									<ul class="list-group">
+							
 
-										<li class="list-group-item">
-											<a href="#">
-												<i class="ico-category et-heart"></i>  
-												ABOUT US
-											</a>
-										</li>
-										<li class="list-group-item list-toggle"><!-- add "active" to stay open on page load -->
-											<a data-toggle="collapse" data-parent="#sidebar-nav" href="#collapse-1" class="collapsed"> 
-												<i class="ico-dd icon-angle-down"><!-- Drop Down Indicator --></i>
-												<i class="ico-category et-strategy"></i>
-												PORTFOLIO
-											</a>
-											<ul id="collapse-1" class="list-unstyled collapse"><!-- add "in" to stay open on page load -->
-												<li><a href="#"><i class="fa fa-angle-right"></i> 1 COLUMN</a></li>
-												<li class="active">
-													<span class="badge">New</span>
-													<a href="#"><i class="fa fa-angle-right"></i> 2 COLUMNS</a>
-												</li>
-												<li><a href="#"><i class="fa fa-angle-right"></i> 3 COLUMNS</a></li>
-											</ul>
-										</li>
-										<li class="list-group-item list-toggle"><!-- add "active" to stay open on page load -->                
-											<a data-toggle="collapse" data-parent="#sidebar-nav" href="#collapse-2" class="collapsed"> 
-												<i class="ico-dd icon-angle-down"><!-- Drop Down Indicator --></i>
-												<i class="ico-category et-trophy"></i>
-												PORTFOLIO
-											</a>
-											<ul id="collapse-2" class="list-unstyled collapse"><!-- add "in" to stay open on page load -->
-												<li><a href="#"><i class="fa fa-angle-right"></i> SLIDER</a></li>
-												<li class="active"><a href="#"><i class="fa fa-angle-right"></i> HEADERS</a></li>
-												<li><a href="#"><i class="fa fa-angle-right"></i> FOOTERS</a></li>
-											</ul>
-										</li>
-										<li class="list-group-item">
-											<a href="#">
-												<i class="ico-category et-happy"></i>  
-												BLOG
-											</a>
-										</li>
-										<li class="list-group-item">
-											<a href="#">
-												<i class="ico-category et-beaker"></i> 
-												FEATURES
-											</a>
-										</li>
-										<li class="list-group-item">
-											<a href="#">
-												<i class="ico-category et-map-pin"></i> 
-												CONTACT
-											</a>
-										</li>
+						</div>
 
-									</ul>
-									<!-- /SIDE NAV -->
+					</div>
 
-									<!-- social icons -->
-									<div class="text-center margin-bottom-30">
+				</div>
 
-										<a href="#" class="social-icon social-icon-sm social-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
-											<i class="icon-facebook"></i>
-											<i class="icon-facebook"></i>
-										</a>
+				<div class="copyright">
+					<div class="container">
+						
+					</div>
+				</div>
+			</footer>
+			<!-- /FOOTER -->
 
-										<a href="#" class="social-icon social-icon-sm social-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-											<i class="icon-twitter"></i>
-											<i class="icon-twitter"></i>
-										</a>
-
-										<a href="#" class="social-icon social-icon-sm social-linkedin" data-toggle="tooltip" data-placement="top" title="Linkedin">
-											<i class="icon-linkedin"></i>
-											<i class="icon-linkedin"></i>
-										</a>
-
-										<a href="#" class="social-icon social-icon-sm social-rss" data-toggle="tooltip" data-placement="top" title="RSS">
-											<i class="icon-rss"></i>
-											<i class="icon-rss"></i>
-										</a>
-
-									</div>
-									<!-- /social icons -->
-
-								</div>
-
-							</div>
-							<!-- /SIDE PANEL -->
+		<!-- SCROLL TO TOP -->
+		<a href="#" id="toTop"></a>
 
 
-							<!-- SCROLL TO TOP -->
-							<a href="#" id="toTop"></a>
+
+		<!-- JAVASCRIPT FILES -->
+		<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
+
+		
+		
+		
+
+		<!-- REVOLUTION SLIDER -->
+		<script type="text/javascript" src="/assets/plugins/slider.revolution/js/jquery.themepunch.tools.min.js"></script>
+		<script type="text/javascript" src="/assets/plugins/slider.revolution/js/jquery.themepunch.revolution.min.js"></script>
+		<script type="text/javascript" src="/assets/js/view/demo.revolution_slider.js"></script>
+	</body>
+</html>
 
 
-							<!-- JAVASCRIPT FILES -->
-							<script type="text/javascript">var plugin_path = '/assets/plugins/';</script>
-							<script type="text/javascript" src="/assets/plugins/jquery/jquery-2.1.4.min.js"></script>
-
-							<script type="text/javascript" src="/assets/js/scripts.js"></script>
-
-
-						</body>
-						</html>
