fixed tee times and table

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -252,7 +252,7 @@
 </div>
       
       <!-- Info -->
-      <section>
+      <section id="courses">
              
         <div class="container">
           <div class="row">
@@ -285,5 +285,5 @@
 <script 
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPnJdUCTaDoPlmksohRoP36LqmWpVI2b4" >
   </script>
-  
+
 </body>
