--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,7 +121,7 @@
 									</li>
 
 									<li class="dropdown"><!-- PAGES -->
-										<a href="">
+										<a href="#courses">
 											COURSES
 										</a>
 									</li>
