--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
 
 						<!-- Logo -->
 						 <div class=" logo pull-left box-icon box-icon-round box-icon-transparent box-icon-large">
-						<h4 style="color:#fff;"><i class="fa fa-flag" > TeeBox</i></h4>
+						<h4 style="color:#fff;"><i class="fa fa-flag" > TeeBox</i> <i class="fa fa-flag"></i></h4>
 						</div>
 							<!--<div class="box-icon-title">
 				<i class="noborder fa fa-flag" style="background-color:#8ab933;color:#fff; "></i>
@@ -187,23 +187,7 @@
 									</li>
 								</ul>
 							</address>
-							<!-- /Contact Address -->
-
-						</div>
-
-						<div class="col-md-3">
-
-						</div>
-
-						<div class="col-md-2">
-
-
-						</div>
-
-						<div class="col-md-4">
-
 							
-
 						</div>
 
 					</div>
