--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -274,6 +274,7 @@ Welcome To Teebox
         <h4>Map Location</h4>
 
         <div id="map" style="padding-top: 500px;margin-top: 10px"></div>
+        <input id="pac-input" class="controls" type="text" placeholder="San Diego, CA, United States">
         
       </div>
     </div>
@@ -283,7 +284,7 @@ Welcome To Teebox
 
 </div>
 <script 
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPnJdUCTaDoPlmksohRoP36LqmWpVI2b4" >
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPnJdUCTaDoPlmksohRoP36LqmWpVI2b4&libraries=places" >
 </script>
 
 </body>
